--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "html-webpack-template": "^4.0.0",
     "less-middleware": "1.0.x",
     "morgan": "~1.6.1",
-    "npm-install-webpack-plugin": "^3.0.0",
     "node-uuid": "^1.4.7",
+    "npm-install-webpack-plugin": "^3.0.0",
     "react": "^0.14.7",
     "react-addons-update": "^0.14.7",
     "react-dnd": "^2.1.3",
@@ -38,7 +38,8 @@
     "serve-favicon": "~2.3.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
-    "webpack-merge": "^0.8.3"
+    "webpack-merge": "^0.8.3",
+    "webpack-node-externals": "^1.0.0"
   },
   "devDependencies": {
     "debug": "~2.2.0",
