--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.config.production.js --progress --colors",
-    "stats": "webpack --config webpack.config.production.js --profile --json > stats.json",
-    "postinstall": "npm run build",
-    "start": "node app.js"
+    "build": "webpack",
+    "start": "webpack-dev-server",
+    "stats": "webpack --profile --json > stats.json"
   },
   "dependencies": {
     "alt": "^0.18.2",
     "alt-container": "^1.0.2",
     "alt-utils": "^1.0.0",
+    "node-uuid": "^1.4.7",
+    "react": "^0.14.7",
+    "react-addons-update": "^0.14.7",
+    "react-dnd": "^2.1.3",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "^0.14.7"
+  },
+  "devDependencies": {
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
@@ -22,6 +29,7 @@
     "clean-webpack-plugin": "^0.1.8",
     "cookie-parser": "~1.3.5",
     "css-loader": "^0.23.1",
+    "debug": "~2.2.0",
     "express": "~4.13.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "hbs": "~3.1.0",
@@ -29,21 +37,11 @@
     "html-webpack-template": "^4.0.0",
     "less-middleware": "1.0.x",
     "morgan": "~1.6.1",
-    "node-uuid": "^1.4.7",
     "npm-install-webpack-plugin": "^3.0.0",
-    "react": "^0.14.7",
-    "react-addons-update": "^0.14.7",
-    "react-dnd": "^2.1.3",
-    "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^0.14.7",
     "serve-favicon": "~2.3.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
-    "webpack-merge": "^0.8.3",
-    "webpack-node-externals": "^1.0.0"
-  },
-  "devDependencies": {
-    "debug": "~2.2.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.8.3"
   }
 }
